# my-lisp

./: LICENSE  README.md  pyproject.toml
src/: lisp.py
